--- a/.github/workflows/Build_X86_64[immortalwrt].yml
+++ b/.github/workflows/Build_X86_64[immortalwrt].yml
@@ -651,7 +651,7 @@ jobs:
       uses: actions/upload-artifact@main
       if: env.UPLOAD_CONFIG == 'true' && steps.compile.outputs.status == 'success'
       with:
-        name: x86-config
+        name: x86-docker.config
         path: ./artifact/buildinfo/
 
     - name: Delete files
