--- a/.github/workflows/ARMv8-ROOTFS[immortalwrt].yml
+++ b/.github/workflows/ARMv8-ROOTFS[immortalwrt].yml
@@ -325,7 +325,7 @@ jobs:
       uses: ncipollo/release-action@v1
       if: env.UPLOAD_RELEASE == 'true' && steps.compile.outputs.status == 'success'
       with:
-        name: ${{ env.DATE }} 🚫「 ${{ env.FILE_NAME }} 」
+        name: ${{ env.DATE }} 🚫「 ${{ env.FILE_NAME }} 」[immortalwrt]
         allowUpdates: true
         removeArtifacts: true
         tag: ${{ env.FILE_NAME }}-IMMO
