--- a/.github/workflows/ARMv8-OpenWrt[immortalwrt].yml
+++ b/.github/workflows/ARMv8-OpenWrt[immortalwrt].yml
@@ -143,7 +143,7 @@ jobs:
       uses: ncipollo/release-action@v1
       if: env.PACKAGED_STATUS == 'success' && env.UPLOAD_RELEASE == 'true' && !cancelled()
       with:
-        name: ${{ env.DATE }} 「 ${{ env.FILE_NAME }} 」固件
+        name: ${{ env.DATE }} 「 ${{ env.FILE_NAME }}[immortalwrt] 」固件
         allowUpdates: true
         removeArtifacts: true
         tag: ${{ env.PRODUCT_NAME }}_IMMO
