--- a/config/lede_config/x86.config
+++ b/config/lede_config/x86.config
@@ -4670,7 +4670,7 @@ CONFIG_LIBCURL_NO_SMB="!"
 # CONFIG_LIBCURL_SMTP is not set
 # CONFIG_LIBCURL_TELNET is not set
 # CONFIG_LIBCURL_TFTP is not set
-# CONFIG_LIBCURL_NGHTTP2 is not set
+CONFIG_LIBCURL_NGHTTP2=y
 # CONFIG_LIBCURL_NGHTTP3 is not set
 
 #
