--- a/config/lede_config/armv8.config
+++ b/config/lede_config/armv8.config
@@ -4836,7 +4836,7 @@ CONFIG_LIBCURL_NO_SMB="!"
 # CONFIG_LIBCURL_SMTP is not set
 # CONFIG_LIBCURL_TELNET is not set
 # CONFIG_LIBCURL_TFTP is not set
-# CONFIG_LIBCURL_NGHTTP2 is not set
+CONFIG_LIBCURL_NGHTTP2=y
 
 #
 # Miscellaneous
