--- a/config/lede_config/x86.config
+++ b/config/lede_config/x86.config
@@ -2681,7 +2681,7 @@ CONFIG_PACKAGE_kmod-qede=y
 CONFIG_PACKAGE_kmod-qlcnic=y
 CONFIG_PACKAGE_kmod-r6040=y
 # CONFIG_PACKAGE_kmod-r8101 is not set
-CONFIG_PACKAGE_kmod-r8125=y
+# CONFIG_PACKAGE_kmod-r8125 is not set
 CONFIG_PACKAGE_kmod-r8125-rss=y
 CONFIG_PACKAGE_kmod-r8126=y
 CONFIG_PACKAGE_kmod-r8126-rss=y
