--- a/config/lede_config/x86-docker.config
+++ b/config/lede_config/x86-docker.config
@@ -122,8 +122,8 @@ CONFIG_DEFAULT_kmod-mmc=y
 CONFIG_DEFAULT_kmod-nf-nathelper=y
 CONFIG_DEFAULT_kmod-nf-nathelper-extra=y
 CONFIG_DEFAULT_kmod-pcnet32=y
-CONFIG_DEFAULT_kmod-r8125-rss=y
-CONFIG_DEFAULT_kmod-r8126-rss=y
+CONFIG_DEFAULT_kmod-r8125=y
+CONFIG_DEFAULT_kmod-r8126=y
 CONFIG_DEFAULT_kmod-r8168=y
 CONFIG_DEFAULT_kmod-sdhci=y
 CONFIG_DEFAULT_kmod-sound-hda-codec-hdmi=y
@@ -2682,9 +2682,9 @@ CONFIG_PACKAGE_kmod-qlcnic=y
 CONFIG_PACKAGE_kmod-r6040=y
 # CONFIG_PACKAGE_kmod-r8101 is not set
 CONFIG_PACKAGE_kmod-r8125=y
-CONFIG_PACKAGE_kmod-r8125-rss=m
+# CONFIG_PACKAGE_kmod-r8125-rss is not set
 CONFIG_PACKAGE_kmod-r8126=y
-CONFIG_PACKAGE_kmod-r8126-rss=m
+# CONFIG_PACKAGE_kmod-r8126-rss is not set
 # CONFIG_PACKAGE_kmod-r8168 is not set
 CONFIG_PACKAGE_kmod-r8169=y
 CONFIG_PACKAGE_kmod-sfc=y
