更新 ARMv8-OpenWrt[immortalwrt].yml

--- a/.github/workflows/ARMv8-OpenWrt[immortalwrt].yml
+++ b/.github/workflows/ARMv8-OpenWrt[immortalwrt].yml
@@ -198,7 +198,7 @@ jobs:
           内容: ${{ env.commit }}
           hash: ${{ env.hash }}
           ✪ ✣ ✤ ✥ ✦ ❉ ❦ ❧ ❃ ❂ ❁ ❀
-          📍: https://github.com/Jejz168/OpenWrt/releases/tag/${{ env.PRODUCT_NAME }}_IMMO
+          📍: https://github.com/Jejz168/OpenWrt/releases/tag/${{ env.PRODUCT_NAME }}-IMMO
 
     - name: Push notification
       uses: xhnmt/pushplus-action@main
@@ -216,4 +216,4 @@ jobs:
           内容: ${{ env.commit }}
           hash: ${{ env.hash }}
           ✪ ✣ ✤ ✥ ✦ ❉ ❦ ❧ ❃ ❂ ❁ ❀
-          📍: https://github.com/Jejz168/OpenWrt/releases/tag/${{ env.PRODUCT_NAME }}_IMMO
+          📍: https://github.com/Jejz168/OpenWrt/releases/tag/${{ env.PRODUCT_NAME }}-IMMO
