--- a/config/lede_config/x86.config
+++ b/config/lede_config/x86.config
@@ -2626,10 +2626,6 @@ CONFIG_PACKAGE_kmod-bnx2=y
 CONFIG_PACKAGE_kmod-bnx2x=y
 CONFIG_PACKAGE_kmod-bnxt-en=y
 CONFIG_PACKAGE_kmod-dm9000=y
-# CONFIG_PACKAGE_kmod-dsa is not set
-# CONFIG_PACKAGE_kmod-dsa-mv88e6xxx is not set
-# CONFIG_PACKAGE_kmod-dsa-qca8k is not set
-# CONFIG_PACKAGE_kmod-dsa-tag-dsa is not set
 CONFIG_PACKAGE_kmod-dummy=y
 CONFIG_PACKAGE_kmod-e100=y
 CONFIG_PACKAGE_kmod-e1000=y
@@ -2675,19 +2671,14 @@ CONFIG_PACKAGE_kmod-niu=y
 CONFIG_PACKAGE_kmod-pcnet32=y
 # CONFIG_PACKAGE_kmod-phy-amd is not set
 CONFIG_PACKAGE_kmod-phy-aquantia=y
-# CONFIG_PACKAGE_kmod-phy-at803x is not set
 CONFIG_PACKAGE_kmod-phy-ax88796b=y
 CONFIG_PACKAGE_kmod-phy-bcm84881=y
 CONFIG_PACKAGE_kmod-phy-broadcom=y
-# CONFIG_PACKAGE_kmod-phy-intel-xway is not set
 CONFIG_PACKAGE_kmod-phy-marvell=y
 # CONFIG_PACKAGE_kmod-phy-marvell-10g is not set
-# CONFIG_PACKAGE_kmod-phy-micrel is not set
 CONFIG_PACKAGE_kmod-phy-microchip=y
-# CONFIG_PACKAGE_kmod-phy-qca83xx is not set
 CONFIG_PACKAGE_kmod-phy-realtek=y
 CONFIG_PACKAGE_kmod-phy-smsc=y
-# CONFIG_PACKAGE_kmod-phy-vitesse is not set
 CONFIG_PACKAGE_kmod-phylib-broadcom=y
 CONFIG_PACKAGE_kmod-phylink=y
 CONFIG_PACKAGE_kmod-qede=y
@@ -3349,67 +3340,7 @@ CONFIG_NODEJS_16=y
 #
 # PHP8
 #
-CONFIG_PACKAGE_php8=y
-# CONFIG_PHP8_LIBXML is not set
-CONFIG_PHP8_SYSTEMTZDATA=y
-CONFIG_PACKAGE_php8-cgi=y
-# CONFIG_PACKAGE_php8-cli is not set
-# CONFIG_PACKAGE_php8-fastcgi is not set
-# CONFIG_PACKAGE_php8-fpm is not set
-# CONFIG_PACKAGE_php8-mod-bcmath is not set
-# CONFIG_PACKAGE_php8-mod-calendar is not set
-# CONFIG_PACKAGE_php8-mod-ctype is not set
-CONFIG_PACKAGE_php8-mod-curl=y
-# CONFIG_PACKAGE_php8-mod-dom is not set
-# CONFIG_PACKAGE_php8-mod-exif is not set
-# CONFIG_PACKAGE_php8-mod-fileinfo is not set
-# CONFIG_PACKAGE_php8-mod-filter is not set
-# CONFIG_PACKAGE_php8-mod-ftp is not set
-# CONFIG_PACKAGE_php8-mod-gd is not set
-# CONFIG_PACKAGE_php8-mod-gettext is not set
-# CONFIG_PACKAGE_php8-mod-gmp is not set
-# CONFIG_PACKAGE_php8-mod-iconv is not set
-# CONFIG_PACKAGE_php8-mod-imap is not set
-# CONFIG_PACKAGE_php8-mod-intl is not set
-# CONFIG_PACKAGE_php8-mod-ldap is not set
-# CONFIG_PACKAGE_php8-mod-mbstring is not set
-# CONFIG_PACKAGE_php8-mod-mysqli is not set
-# CONFIG_PACKAGE_php8-mod-mysqlnd is not set
-# CONFIG_PACKAGE_php8-mod-opcache is not set
-# CONFIG_PACKAGE_php8-mod-openssl is not set
-# CONFIG_PACKAGE_php8-mod-pcntl is not set
-# CONFIG_PACKAGE_php8-mod-pdo is not set
-# CONFIG_PACKAGE_php8-mod-pdo-mysql is not set
-# CONFIG_PACKAGE_php8-mod-pdo-pgsql is not set
-# CONFIG_PACKAGE_php8-mod-pdo-sqlite is not set
-# CONFIG_PACKAGE_php8-mod-pgsql is not set
-# CONFIG_PACKAGE_php8-mod-phar is not set
-# CONFIG_PACKAGE_php8-mod-session is not set
-# CONFIG_PACKAGE_php8-mod-shmop is not set
-# CONFIG_PACKAGE_php8-mod-simplexml is not set
-# CONFIG_PACKAGE_php8-mod-snmp is not set
-# CONFIG_PACKAGE_php8-mod-soap is not set
-# CONFIG_PACKAGE_php8-mod-sockets is not set
-# CONFIG_PACKAGE_php8-mod-sodium is not set
-# CONFIG_PACKAGE_php8-mod-sqlite3 is not set
-# CONFIG_PACKAGE_php8-mod-sysvmsg is not set
-# CONFIG_PACKAGE_php8-mod-sysvsem is not set
-# CONFIG_PACKAGE_php8-mod-sysvshm is not set
-# CONFIG_PACKAGE_php8-mod-tokenizer is not set
-# CONFIG_PACKAGE_php8-mod-xml is not set
-# CONFIG_PACKAGE_php8-mod-xmlreader is not set
-# CONFIG_PACKAGE_php8-mod-xmlwriter is not set
-# CONFIG_PACKAGE_php8-mod-zip is not set
-# CONFIG_PACKAGE_php8-pecl-dio is not set
-# CONFIG_PACKAGE_php8-pecl-http is not set
-# CONFIG_PACKAGE_php8-pecl-imagick is not set
-# CONFIG_PACKAGE_php8-pecl-krb5 is not set
-# CONFIG_PACKAGE_php8-pecl-mcrypt is not set
-# CONFIG_PACKAGE_php8-pecl-raphf is not set
-# CONFIG_PACKAGE_php8-pecl-redis is not set
-# CONFIG_PACKAGE_php8-pecl-sodium is not set
-# CONFIG_PACKAGE_php8-pecl-swoole is not set
-# CONFIG_PACKAGE_php8-pecl-xdebug is not set
+# CONFIG_PACKAGE_php8 is not set
 # end of PHP8
 
 #
@@ -5272,7 +5203,6 @@ CONFIG_PACKAGE_luci-app-mosdns=y
 CONFIG_PACKAGE_luci-app-mwan3=y
 # CONFIG_PACKAGE_luci-app-mwan3helper is not set
 CONFIG_PACKAGE_luci-app-n2n=y
-CONFIG_PACKAGE_luci-app-nekoclash=y
 CONFIG_PACKAGE_luci-app-netdata=y
 CONFIG_PACKAGE_luci-app-nfs=y
 # CONFIG_PACKAGE_luci-app-nft-qos is not set
@@ -7540,7 +7470,7 @@ CONFIG_PACKAGE_virtio-console-helper=y
 # CONFIG_PACKAGE_zoneinfo-asia is not set
 # CONFIG_PACKAGE_zoneinfo-atlantic is not set
 # CONFIG_PACKAGE_zoneinfo-australia-nz is not set
-CONFIG_PACKAGE_zoneinfo-core=y
+# CONFIG_PACKAGE_zoneinfo-core is not set
 # CONFIG_PACKAGE_zoneinfo-europe is not set
 # CONFIG_PACKAGE_zoneinfo-india is not set
 # CONFIG_PACKAGE_zoneinfo-northamerica is not set
