--- a/.github/workflows/Build_X86_64_op23.yml
+++ b/.github/workflows/Build_X86_64_op23.yml
@@ -1407,7 +1407,7 @@ jobs:
 # //////////////////////////////////////////////////////////////////////////////////////////////
   Cleaning:
     if: ${{ always() }}
-    needs: [Checka,Build_x86_64_54,Build_x86_64_515,Build_x86_64_61,Build_x86_64_66,Build_x86_64_66-op23]
+    needs: [Checka,Build_x86_64_54,Build_x86_64_515,Build_x86_64_61,Build_x86_64_66]
     runs-on: ubuntu-latest
     steps:
     - name: Delete workflow runs
