--- a/.github/workflows/lede-config.yml
+++ b/.github/workflows/lede-config.yml
@@ -22,12 +22,12 @@ on:
 env:
   REPO_URL: https://github.com/coolsnowwolf/lede
   REPO_BRANCH: master
-  FEEDS_CONF: feeds_config/lede23.feeds.conf.default
+  FEEDS_CONF: feeds_config/lede.feeds.conf.default
   CONFIG_FILE: config/lede_config/x86.config
   CONFIG_FILE_ARM: config/lede_config/armv8.config
   DIY_P1_SH: diy_script/lede_diy/x86/diy-part1.sh
   DIY_P1_SH_ARM: diy_script/lede_diy/armv8/diy-part1.sh
-  DIY_P2_SH: diy_script/lede_diy/x86/diy23-part2.sh
+  DIY_P2_SH: diy_script/lede_diy/x86/diy-part2.sh
   DIY_P2_SH_ARM: diy_script/lede_diy/armv8/diy-part2.sh
   UPLOAD_FIRMWARE: true
   UPLOAD_RELEASE: false
