--- a/config/lede_config/x86-docker.config
+++ b/config/lede_config/x86-docker.config
@@ -219,7 +219,7 @@ CONFIG_TARGET_UBIFS_FREE_SPACE_FIXUP=y
 CONFIG_TARGET_UBIFS_JOURNAL_SIZE=""
 CONFIG_GRUB_IMAGES=y
 CONFIG_GRUB_EFI_IMAGES=y
-CONFIG_GRUB_CONSOLE=y
+# CONFIG_GRUB_CONSOLE is not set
 CONFIG_GRUB_SERIAL="ttyS0"
 CONFIG_GRUB_BAUDRATE=115200
 # CONFIG_GRUB_FLOWCONTROL is not set
