--- a/.github/workflows/Build_X86_64[Docker].yml
+++ b/.github/workflows/Build_X86_64[Docker].yml
@@ -22,16 +22,8 @@ on:
         description: 'Checkupdates66 connection to Actions'
         required: false
         default: 'false'
-      ssh54:
-        description: 'SSH54 connection to Actions'
-        required: false
-        default: 'false'
-      ssh515:
-        description: 'SSH515 connection to Actions'
-        required: false
-        default: 'false'
-      ssh66:
-        description: 'SSH66 connection to Actions'
+      ssh:
+        description: 'SSH connection to Actions'
         required: false
         default: 'false'
   schedule:
@@ -225,7 +217,7 @@ jobs:
 
     - name: SSH connection to Actions
       uses: P3TERX/ssh2actions@v1.0.0
-      if: (github.event.inputs.ssh == 'true' && github.event.inputs.ssh54  != 'false') || contains(github.event.action, 'ssh54')
+      if: (github.event.inputs.ssh == 'true' && github.event.inputs.ssh  != 'false') || contains(github.event.action, 'ssh')
       env:
         TELEGRAM_CHAT_ID: ${{ secrets.TELEGRAM_CHAT_ID }}
         TELEGRAM_BOT_TOKEN: ${{ secrets.TELEGRAM_BOT_TOKEN }}
@@ -346,7 +338,7 @@ jobs:
         tag: ${{ env.TAG }}_Docker_${{ env.KERNEL }}
         token: ${{ secrets.GH_TOKEN }}
         body: |
-          **This is OpenWrt Firmware for ${{ env.FILE_NAME }}**
+          **This is LEDE Firmware for ${{ env.FILE_NAME }}**
           ### 📒 固件信息
           - 🔴 Docker版固件(Kernel=32M，rootfs=5120M)
           - 💻 平台架构: ${{ env.FILE_NAME }}
@@ -533,7 +525,7 @@ jobs:
 
     - name: SSH connection to Actions
       uses: P3TERX/ssh2actions@v1.0.0
-      if: (github.event.inputs.ssh == 'true' && github.event.inputs.ssh515  != 'false') || contains(github.event.action, 'ssh515')
+      if: (github.event.inputs.ssh == 'true' && github.event.inputs.ssh  != 'false') || contains(github.event.action, 'ssh')
       env:
         TELEGRAM_CHAT_ID: ${{ secrets.TELEGRAM_CHAT_ID }}
         TELEGRAM_BOT_TOKEN: ${{ secrets.TELEGRAM_BOT_TOKEN }}
@@ -654,7 +646,7 @@ jobs:
         tag: ${{ env.TAG }}_Docker_${{ env.KERNEL }}
         token: ${{ secrets.GH_TOKEN }}
         body: |
-          **This is OpenWrt Firmware for ${{ env.FILE_NAME }}**
+          **This is LEDE Firmware for ${{ env.FILE_NAME }}**
           ### 📒 固件信息
           - 🔴 Docker版固件(Kernel=32M，rootfs=5120M)
           - 💻 平台架构: ${{ env.FILE_NAME }}
@@ -841,7 +833,7 @@ jobs:
 
     - name: SSH connection to Actions
       uses: P3TERX/ssh2actions@v1.0.0
-      if: (github.event.inputs.ssh == 'true' && github.event.inputs.ssh66  != 'false') || contains(github.event.action, 'ssh515')
+      if: (github.event.inputs.ssh == 'true' && github.event.inputs.ssh  != 'false') || contains(github.event.action, 'ssh')
       env:
         TELEGRAM_CHAT_ID: ${{ secrets.TELEGRAM_CHAT_ID }}
         TELEGRAM_BOT_TOKEN: ${{ secrets.TELEGRAM_BOT_TOKEN }}
@@ -962,7 +954,7 @@ jobs:
         tag: ${{ env.TAG }}_Docker_${{ env.KERNEL }}
         token: ${{ secrets.GH_TOKEN }}
         body: |
-          **This is OpenWrt Firmware for ${{ env.FILE_NAME }}**
+          **This is LEDE Firmware for ${{ env.FILE_NAME }}**
           ### 📒 固件信息
           - 🔴 Docker版固件(Kernel=32M，rootfs=5120M)
           - 💻 平台架构: ${{ env.FILE_NAME }}
