--- a/.github/workflows/Build_X86_64.yml
+++ b/.github/workflows/Build_X86_64.yml
@@ -1821,6 +1821,8 @@ jobs:
         $GITHUB_WORKSPACE/$DIY_P2_SH
         $GITHUB_WORKSPACE/diy_script/preset-clash-core.sh $CLASH_KERNEL
         $GITHUB_WORKSPACE/diy_script/preset-adguard-core.sh $CLASH_KERNEL
+
+        sed -i 's/CONFIG_PACKAGE_kmod-ice=y/CONFIG_PACKAGE_kmod-ice=m/g' .config
         
         sed -i 's/CONFIG_LINUX.*/CONFIG_LINUX_6_12=y/g' .config
 
