--- a/.github/workflows/Build_X86_64.yml
+++ b/.github/workflows/Build_X86_64.yml
@@ -1823,6 +1823,8 @@ jobs:
         $GITHUB_WORKSPACE/diy_script/preset-adguard-core.sh $CLASH_KERNEL
 
         sed -i 's/CONFIG_PACKAGE_kmod-ice=y/# CONFIG_PACKAGE_kmod-ice is not set/g' .config
+
+        sed -i 's/CONFIG_PACKAGE_kmod-usb-net-asix=y/# CONFIG_PACKAGE_kmod-usb-net-asix is not set/g' .config
         
         sed -i 's/CONFIG_LINUX.*/CONFIG_LINUX_6_12=y/g' .config
 
